--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.17.1",
     "nightmare": "^3.0.2",
     "nodemon": "^2.0.4"
-  }
+  },
+  "engines": {
+    "node": "v14.5.0"
+}
 }
